src/scss/components/_Header.scss
.Header {
  position: relative;

  &__shape {
    position: relative;
    max-width: none;
    width: 150%;
    height: auto;
    margin-left: -25%;
    pointer-events: none;
    user-select: none;
  }

  &__title {
    position: absolute;
    bottom: 0;
    left: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 60vw;
    height: 11.6vw;
    margin: 0;
    font-weight: $font-weight-bold;
    font-size: 3.375vw;
    color: $color-8;
    text-align: center;
    transform: translateX(-50%);
    z-index: 10;
  }

  &__play-button {
    position: absolute;
    bottom: 20vw;
    left: 50%;
    width: 15vw;
    max-width: rem(160);
    transform: translate(-50%, 0);

    svg {
      display: block;
      width: 100%;
      height: auto;
      @include transition-base;
      pointer-events: none;
    }

    &:hover {
      svg {
        transform: scale(1.05);
      }
    }
  }

  @include media-breakpoint-up(sm) {
    &__shape {
      margin-top: -2.5vw;
    }
  }

  @include media-breakpoint-up(md) {
    &__shape {
      width: 125%;
      margin-left: -12.5%;
    }

    &__title {
      height: 9.85vw;
      font-size: 2.875vw;
    }

    &__play-button {
      width: 12.5vw;
    }
  }

  @include media-breakpoint-up(lg) {
    &__shape {
      margin-top: -5vw;
    }
  }

  @include media-breakpoint-up(xl) {
    &__shape {
      width: 110%;
      margin-left: -5%;
    }

    &__title {
      width: 50vw;
      height: 8.75vw;
      font-size: 2.625vw;
    }

    &__play-button {
      bottom: 17.5vw;
      width: 10vw;
    }
  }

  @include media-breakpoint-up(xxl) {
    &__shape {
      width: 100%;
      margin-left: 0;
    }

    &__title {
      width: 45vw;
      height: 7.85vw;
      font-size: 2.375vw;
    }

    &__play-button {
      bottom: 15vw;
    }
  }

  @media (min-width: 1600px) {
    &__shape {
      margin-top: -7.5vw;
    }
  }
}

